Fixed archive mapping of the entry archive

--- a/themes/scale_goodpic/theme.yaml
+++ b/themes/scale_goodpic/theme.yaml
@@ -68,7 +68,7 @@ elements:
             mappings: 
               individual: 
                 archive_type: Individual
-                file_template: archives2/%y/%m/%-f
+                file_template: archives2/%y/%m/%f
                 preferred: 1
         module: 
           module_banner_footer: 
